--- a/lab4.html
+++ b/lab4.html
@@ -91,7 +91,7 @@
                             <br><br>
                             <code> roll_a  = atan2(myICM.accX(),myICM.accZ())*180/M_PI; </code>
                             <br><br>
-                            The values were accurate within ±2 degrees, and the outputs at {-90, 0, 90} degrees are shown below:
+                            I observed the values to be accurate within ±2 degrees, and the outputs at {-90, 0, 90} degrees are shown below:
                         </p>
                         <img src="assets/img/Accelerometer.JPEG" alt="Accelerometer Roll and Pitch" width=100% height=auto/>
                         <br><br>
