--- a/lab4.html
+++ b/lab4.html
@@ -171,8 +171,11 @@
                         </p>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/n67UHzydZ7Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         
-                        <h2>Cut the Cord</h2>
-                        <p>body</p>
+                        <h2>Cut the Coord</h2>
+                        <p> Next, I finally integrate the sensors and Artemis board with the robot! I used a 850mAh battery to power the robot's 
+                        motor drivers, and I used the other 650mAh mattery to power the Artemis. The voltage supply of both batteries is 3.7V, 
+                        and the reason I chose to use the larger capacity battery for the motors is because they consume power more quickly
+                        than the board. Here is a picture of the hardware setup with the battery attached:</p>
                         
                         <h2>Record a Stunt</h2>
                         <p>body</p>
