--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <a class="dropdown-item" href=lab2.html>Lab 2</a>
             <a class="dropdown-item" href=lab3.html>Lab 3</a>
             <a class="dropdown-item" href=lab4.html>Lab 4</a>
+            <a class="dropdown-item" href=lab5.html>Lab 5</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#about">About me</a>
           </div>
@@ -118,7 +119,6 @@
                         <a class="nav-link" href="lab3.html"> 
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab3.jpg" alt="..." />
                         </a>
-                    </div>
                     </div>
                      <div class="col-lg-4 col-sm-6">
                         <a class="nav-link" href="lab4.html"> 
