--- a/index.html
+++ b/index.html
@@ -122,16 +122,13 @@
                     </div>
                      <div class="col-lg-4 col-sm-6">
                         <a class="nav-link" href="lab4.html"> 
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab3.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab4.jpg" alt="..." />
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
+                    </div>
+                     <div class="col-lg-4 col-sm-6">
+                        <a class="nav-link" href="lab5.html"> 
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab5.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
