--- a/index.html
+++ b/index.html
@@ -131,12 +131,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-                            <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
+                        <a class="nav-link" href="lab6.html"> 
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab5.jpg" alt="..." />
                         </a>
                     </div>
                 </div>
