--- a/lab6.html
+++ b/lab6.html
@@ -101,6 +101,8 @@
                         </div>
                         <br>
                         
+                        <script src="https://gist.github.com/tiffanyguo8/c60dd8f5293b7445ac735170cac04837.js"></script>
+                        
                         <div class="progress">
                           <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
