--- a/lab6.html
+++ b/lab6.html
@@ -52,8 +52,7 @@
                             </p>              
                                 <script src="https://gist.github.com/tiffanyguo8/01cf86b6683713e6339b89afb6931930.js"></script>
                                 <script src="https://gist.github.com/tiffanyguo8/5c7244c81fc015d97b80d1e78e3e4de3.js"></script>
-                            <p
-                                In my main loop, I also added new logic for the storing and transmission of data. Previously, I would send data over Bluetooth
+                            <p class="mb-1">In my main loop, I also added new logic for the storing and transmission of data. Previously, I would send data over Bluetooth
                                 right as I received it, which caused significant delay in my data collection process. My code now stores data in arrays on the 
                                 Artemis board and only sends data when it is requested over Bluetooth. 
                             </p>
