--- a/lab6.html
+++ b/lab6.html
@@ -84,12 +84,11 @@
                               as little oscillation as possible. To find the optimal parameters for the PID control system, I used the following heuristic from class: 
                               <br>
                               1. Set k_p to small value, k_d and k_i to 0.
-                              <br>
-                              2. Increase k_d until oscillation, then decrease by a factor of 2 to 4. 
-                              <br>
-                              3. Increase k_p until oscillation or overshoot, then decrease by a factor of 2 to 4. 
-                              <br>
-                              4. Increase k_i until oscillation or overshoot. 
+                                <h2>Emphasis classes</h2>
+                                <p class="text-danger">2. Increase k_d until oscillation, then decrease by a factor of 2 to 4. </p>
+                                <p class="text-success">3. Increase k_p until oscillation or overshoot, then decrease by a factor of 2 to 4. </p>
+                                <p class="text-info">4. Increase k_i until oscillation or overshoot. </p>
+                                
                               </p>
                           </a>
                         </div>
