--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <a class="dropdown-item" href=lab3.html>Lab 3</a>
             <a class="dropdown-item" href=lab4.html>Lab 4</a>
             <a class="dropdown-item" href=lab5.html>Lab 5</a>
+            <a class="dropdown-item" href=lab6.html>Lab 6</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#about">About me</a>
           </div>
