--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <a class="dropdown-item" href=lab4.html>Lab 4</a>
             <a class="dropdown-item" href=lab5.html>Lab 5</a>
             <a class="dropdown-item" href=lab6.html>Lab 6</a>
+            <a class="dropdown-item" href=lab7.html>Lab 7</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#about">About me</a>
           </div>
@@ -133,6 +134,11 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="nav-link" href="lab6.html"> 
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab6.jpg" alt="..." />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="nav-link" href="lab7.html"> 
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab6.jpg" alt="..." />
                         </a>
                     </div>
