--- a/lab7.html
+++ b/lab7.html
@@ -47,15 +47,14 @@
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">Estimate drag and momentum</h5>
                             </div>
-                            <p class="mb-1">Before embarking on the main lab task, I first reorganized my code file structure and my system for sending data
-                                from the Artemis board to my laptop over Bluetooth. I broke down my Arduino file into one main file and two .h/.cpp files, one
-                                for motor functions and one for bluetooth commands. The header files below show the functions included in each file:
+                            <p class="mb-1">
+                                First, I need to estimate the drag and momentum matrices, which are represented by the variables A and B in the KF equations.
+                                To do this, I will drive a step response and measure the ToF sensor readings and PWM input from the robot. Below are the graphs
+                                of the data I collected. I took the derivative of the position graph (created using ToF data) to display the velocity graph. 
                             </p>    
                         </a>
                     </div>
                         <br>
-                            <script src="https://gist.github.com/tiffanyguo8/01cf86b6683713e6339b89afb6931930.js"></script>
-                            <script src="https://gist.github.com/tiffanyguo8/5c7244c81fc015d97b80d1e78e3e4de3.js"></script>
 
                             <p class="mb-1">In my main loop, I also added new logic for the storing and transmission of data. Previously, I would send data over Bluetooth
                             right as I received it, which caused significant delay in my data collection process. My code now stores data in arrays on the 
