--- a/lab7.html
+++ b/lab7.html
@@ -67,11 +67,11 @@
                         </a>
                     </div>
                         <br>
-                            <img src="assets/img/kf_tof_3.png" alt="KF" width=70% height=auto/>
+                            <img src="assets/img/kf_tof_final.png" alt="KF" width=70% height=auto/>
                         <br><br>
-                            <img src="assets/img/kf_pwm_3.png" alt="KF" width=70% height=auto/>
+                            <img src="assets/img/kf_pwm_final.png" alt="KF" width=70% height=auto/>
                         <br><br>
-                            <img src="assets/img/kf_vel_3.png" alt="KF" width=70% height=auto/>
+                            <img src="assets/img/kf_vel_final.png" alt="KF" width=70% height=auto/>
                         <br><br>
                             <p class="mb-1">
                                 From these graphs, I can determine the steady state velocity, which is the (peak) velocity at which the robot stops accelerating,
