--- a/lab7.html
+++ b/lab7.html
@@ -67,7 +67,7 @@
                         </a>
                     </div>
                         <br>
-                            <img src="assets/img/kf_tof_final.png" alt="KF" width=70% height=auto/>
+                            <img src="assets/img/kf_pos_final.png" alt="KF" width=70% height=auto/>
                         <br><br>
                             <img src="assets/img/kf_pwm_final.png" alt="KF" width=70% height=auto/>
                         <br><br>
@@ -78,6 +78,17 @@
                                 and the 90% rise time, which is the time it takes to reach 90% of the steady state velocity. These values are then used to calculate drag and
                                 momentum using the previous equations. 
                             </p>    
+                        
+                            <div class="card border-info mb-3" style="max-width: 20rem;">
+                              <div class="card-body">
+                                <p class="card-text">
+                                    Steady state velocity (ẋ) = 1800 mm/s 
+                                    <br>
+                                    90% rise time (t<sub>0.9</sub>) = 1.5 s
+                                  </p>
+                              </div>
+                            </div>
+              
                     <br>
                             <script src="https://gist.github.com/tiffanyguo8/7d4eaaddc3d1df802f5fcba9b3a0eb5d.js"></script>
                         <br>
