--- a/lab7.html
+++ b/lab7.html
@@ -88,6 +88,16 @@
                                   </p>
                               </div>
                             </div>
+                        
+                            <div class="card border-danger mb-3" style="max-width: 20rem;">
+                              <div class="card-body">
+                                <p class="card-text">
+                                    Drag (d) = u 1&frasl;ẋ = 1 1&frasl; 1800 = 0.000555
+                                    <br>
+                                    Mass (m) = -dt<sub>0.9</sub> 1&frasl; ln(1-0.9) = -0.0005 * 1.5 1&frasl; ln(1-0.9) = 0.00326
+                                  </p>
+                              </div>
+                            </div>
               
                     <br>
                             <script src="https://gist.github.com/tiffanyguo8/7d4eaaddc3d1df802f5fcba9b3a0eb5d.js"></script>
