--- a/lab7.html
+++ b/lab7.html
@@ -89,12 +89,12 @@
                               </div>
                             </div>
                         
-                            <div class="card border-danger mb-3" style="max-width: 20rem;">
+                            <div class="card border-danger mb-3" style="max-width: 40rem;">
                               <div class="card-body">
                                 <p class="card-text">
-                                    Drag (d) = u 1&frasl;ẋ = 1 1&frasl; 1800 = 0.000555
+                                    Drag (d) = u / ẋ = 1 / 1800 = 0.000555
                                     <br>
-                                    Mass (m) = -dt<sub>0.9</sub> 1&frasl; ln(1-0.9) = -0.0005 * 1.5 1&frasl; ln(1-0.9) = 0.00326
+                                    Mass (m) = -dt<sub>0.9</sub> / ln(1-0.9) = -0.0005 * 1.5 / ln(1-0.9) = 0.00326
                                   </p>
                               </div>
                             </div>
