--- a/lab7.html
+++ b/lab7.html
@@ -103,10 +103,15 @@
                                   </p>
                               </div>
                             </div>
-              
-                    <br>
-                            <script src="https://gist.github.com/tiffanyguo8/7d4eaaddc3d1df802f5fcba9b3a0eb5d.js"></script>
+                        <p class="mb-1">
+                                The calculated values for drag and mass are plugged to the A and B matrices from our Kalman filter equations, resulting
+                                in the matrices below. These matrices will next be used along with noise matrices in the Kalman filter code. 
+                        </p>    
                         <br>
+                            <img src="assets/img/a_matrix.png" alt="A Matrix" width=45% height=auto/>
+                        <br><br>
+                            <img src="assets/img/b_matrix.png" alt="B Matrix" width=45% height=auto/>
+                        <br><br>
                         
                         <div class="list-group">
                           <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
