--- a/lab7.html
+++ b/lab7.html
@@ -116,10 +116,6 @@
                             </div>
                             <p class="mb-1"> After measuring my robot's step response, I now have all the data I need to initialize the Kalman filter. This can
                                 be done in 4 steps, as follows:
-                                <p class="text-warning">1. Discretize A and B matrices based on sampling rate. </p>
-                                <p class="text-info">2. Identify C matrix. </p>
-                                <p class="text-success">3. Initialize state vector, x. </p>
-                                <p class="text-danger">4. Specify process noise and sensor noise covariance matrices. </p>
                               </p>
                           </a>
                         </div>
@@ -127,28 +123,28 @@
     
                         
                         <div class="card text-white bg-warning mb-3" style="max-width: 50rem;">
-                          <div class="card-header">Header</div>
+                          <div class="card-header">1. Discretize A and B matrices based on sampling rate</div>
                           <div class="card-body">
                             <h4 class="card-title">Success card title</h4>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           </div>
                         </div>
                         <div class="card text-white bg-info mb-3" style="max-width: 50rem;">
-                          <div class="card-header">Header</div>
+                          <div class="card-header">2. Identify C matrix</div>
                           <div class="card-body">
                             <h4 class="card-title">Danger card title</h4>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           </div>
                         </div>
                         <div class="card text-white bg-success mb-3" style="max-width: 50rem;">
-                          <div class="card-header">Header</div>
+                          <div class="card-header">3. Initialize state vector, x</div>
                           <div class="card-body">
                             <h4 class="card-title">Warning card title</h4>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           </div>
                         </div>
                         <div class="card text-white bg-danger mb-3" style="max-width: 50rem;">
-                          <div class="card-header">Header</div>
+                          <div class="card-header">4. Specify process noise and sensor noise covariance matrices</div>
                           <div class="card-body">
                             <h4 class="card-title">Info card title</h4>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
